--- a/public/index.html
+++ b/public/index.html
@@ -6,28 +6,45 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300i,700i" rel="stylesheet">
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css">
+
+    <link rel="stylesheet" href="/styles/new-tweet.css">
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
-    <script type="text/javascript" src="/scripts/app.js"></script>
+
   </head>
 
   <body>
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png" width="80px" height="80px">
+      <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
     </nav>
-
     <!-- Page-specific (main) content here -->
     <main class="container">
-    </main>
+        <section class="new-tweet">
+            <form method='POST' action='/tweets' class="textbox">
+              <h2>Compose Tweet</h2>
+              <textarea class="text" name="text" placeholder="What are you humming about?"></textarea>
+              <input type="submit" value="Tweet" class="tweet">
+              <span class="counter">140</span>
+            </form>
+          </section>
+          <article id="tweets1">
 
+          </article>
+    </main>
+<script type="text/javascript" src="/scripts/app.js"></script>
+<script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </body>
 </html>
