--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <title>Tweeter - Home Page</title>
 
     <!-- External CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300i,700i" rel="stylesheet">
@@ -29,13 +31,16 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button type="submit" class="btn btn-primary" id="compose">Compose</button> 
     </nav>
     <!-- Page-specific (main) content here -->
     <main class="container">
         <section class="new-tweet">
+          <span class="errorChar" style='display:none'>Error too many characters</span>
+          <span class="errorEmpty" style='display:none'>Nothing to tweet</span>
             <form method='POST' action='/tweets' class="textbox">
               <h2>Compose Tweet</h2>
-              <textarea class="text" name="text" placeholder="What are you humming about?"></textarea>
+              <textarea class="text" name="text" placeholder="What are you humming about?" autofocus></textarea>
               <input type="submit" value="Tweet" class="tweet">
               <span class="counter">140</span>
             </form>
