fixed tweeters CSS

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
-      <button type="submit" class="btn btn-primary" id="compose">Compose</button> 
+      <button type="submit" class="btn btn-primary fa fa-edit" id="compose">Compose</button> 
     </nav>
     <!-- Page-specific (main) content here -->
     <main class="container">
