Fixed tweeter bugs

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
           <span class="errorEmpty" style='display:none'>Nothing to tweet</span>
             <form method='POST' action='/tweets' class="textbox">
               <h2>Compose Tweet</h2>
-              <textarea class="text" name="text" placeholder="What are you humming about?" autofocus></textarea>
+              <textarea class="tweet_text_area" name="text" placeholder="What are you humming about?" autofocus></textarea>
               <input type="submit" value="Tweet" class="tweet">
               <span class="counter">140</span>
             </form>
